updating social links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,199 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@article{haffner2022untargeted,
+  title={Untargeted fecal metabolomic analyses across an industrialization gradient reveal shared metabolites and impact of industrialization on fecal microbiome-metabolome interactions},
+  author={Haffner, Jacob J and Katemauswa, Mitchelle and Kagone, Th{\'e}r{\`e}se S and Hossain, Ekram and Jacobson, David and Flores, Karina and Parab, Adwaita R and Obregon-Tito, Alexandra J and Tito, Raul Y and Reyes, Luis Marin and others},
+  journal={MSystems},
+  volume={7},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  pages={e00710--22},
+  year={2022},
+  publisher={Am Soc Microbiol}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{jacobson2023optimizing,
+  title={Optimizing hierarchical tree dissection parameters using historic epidemiologic data as ‘ground truth’},
+  author={Jacobson, David and Barratt, Joel},
+  journal={Plos one},
+  volume={18},
+  number={2},
+  pages={e0282154},
+  year={2023},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
+@article{jacobson2021analysis,
+  title={Analysis of global human gut metagenomes shows that metabolic resilience potential for short-chain fatty acid production is strongly influenced by lifestyle},
+  author={Jacobson, David and Honap, Tanvi P and Ozga, Andrew T and Meda, Nicolas and Kagone, Therese S and Carabin, Helene and Spicer, Paul and Tito, Raul Y and Obregon-Tito, Alexandra J and Reyes, Luis Marin and Troncoso-Corzo, Luzmila and Guija-Poma, Emilio and Sankaranarayanan, Krithivasan, and Lewis Jr, Cecil M},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={1724},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{leonard2024evaluation,
+  title={Evaluation of the Increased Genetic Resolution and Utility for Source Tracking of a Recently Developed Method for Genotyping Cyclospora cayetanensis},
+  author={Leonard, Susan R and Mammel, Mark K and Almeria, Sonia and Gebru, Solomon T and Jacobson, David and Peterson, Anna C and Barratt, Joel LN and Musser, Steven M},
+  journal={Microorganisms},
+  volume={12},
+  number={5},
+  pages={848},
+  year={2024},
+  publisher={MDPI}
+}
+
+
+@phdthesis{jacobson2020factors,
+  author       = {David, Jacobson},
+  title        = {Factors Influencing Ecological Dynamics of the Human Microbiome},
+  school       = {University of Oklahoma},
+  year         = {2021},
+  url          = {https://shareok.org/handle/11244/325633}
+}
+
+
+@article{jacobson2020functional,
+  title={Functional diversity of microbial ecologies estimated from ancient human coprolites and dental calculus},
+  author={Jacobson, David and Honap, Tanvi P and Monroe, Cara and Lund, Justin and Houk, Brett A and Novotny, Anna C and Robin, Cynthia and Marini, Elisabetta and Lewis Jr, Cecil M},
+  journal={Philosophical Transactions of the Royal Society B},
+  volume={375},
+  number={1812},
+  pages={20190586},
+  year={2020},
+  publisher={The Royal Society}
+}
+
+@article{kahler2024sources,
+  title={Sources and Prevalence of Cyclospora cayetanensis in Southeastern US Growing Environments},
+  author={Kahler, Amy M and Hofstetter, Jessica and Arrowood, Michael and Peterson, Anna and Jacobson, David and Barratt, Joel and da Silva, Andre Luiz Biscaia Ribeiro and Rodrigues, Camila and Mattioli, Mia C},
+  journal={Journal of Food Protection},
+  pages={100309},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@inproceedings{jacobson2022optimization,
+  title={Optimization of CDC's Cyclospora cayetanensis Genotyping Workflow Yields More Accurate Genetic Clustering Results},
+  author={Jacobson, David and Zheng, Yueli and Peterson, Anna and Richins, Travis and Qvarnstrom, Yvonne and Cama, Vitaliano and Barratt, Joel},
+  booktitle = {International Association of Food Protection Annual Meeting},
+  year={2022},
+}
+
+@article{jacobson2023novel,
+  title={Novel insights on the genetic population structure of human-infecting Cyclospora spp. and evidence for rapid subtype selection among isolates from the USA},
+  author={Jacobson, David and Peterson, Anna C and Qvarnstrom, Yvonne and Barratt, Joel LN},
+  journal={Current Research in Parasitology \& Vector-Borne Diseases},
+  volume={4},
+  pages={100145},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{ahart2023retrospective,
+  title={Retrospective evaluation of an integrated molecular-epidemiological approach to cyclosporiasis outbreak investigations--United States, 2021},
+  author={Ahart, Lauren and Jacobson, David and Rice, Marion and Richins, Travis and Peterson, Anna and Zheng, Yueli and Barratt, Joel and Cama, Vitaliano and Qvarnstrom, Yvonne and Montgomery, Susan and Straily, Anne},
+  journal={Epidemiology \& Infection},
+  volume={151},
+  pages={e131},
+  year={2023}
+}
+
+@article{peterson2023limit,
+  title={The limit of detection of the BioFire{\textregistered} FilmArray{\textregistered} gastrointestinal panel for the foodborne parasite Cyclospora cayetanensis},
+  author={Peterson, Anna and Richins, Travis and Houghton, Katelyn and Mishina, Margarita and Sharma, Suresh and Sambhara, Suryaprakash and Jacobson, David and Qvarnstrom, Yvonne and Cama, Vitaliano},
+  journal={Diagnostic Microbiology and Infectious Disease},
+  volume={107},
+  number={2},
+  pages={116030},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{honap2023oral,
+  title={Oral metagenomes from native American ancestors reveal distinct microbial lineages in the pre-contact era},
+  author={Honap, Tanvi P and Monroe, Cara R and Johnson, Sarah J and Jacobson, David and Abin, Christopher A and Austin, Rita M and Sandberg, Paul and Levine, Marc and Sankaranarayanan, Krithivasan and Lewis Jr, Cecil M},
+  journal={American Journal of Biological Anthropology},
+  volume={182},
+  number={4},
+  pages={542--556},
+  year={2023},
   publisher={Wiley Online Library}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{jacobson2022evaluation,
+  title={Evaluation of various distance computation methods for construction of haplotype-based phylogenies from large MLST datasets},
+  author={Jacobson, David and Zheng, Yueli and Plucinski, Mateusz M and Qvarnstrom, Yvonne and Barratt, Joel LN},
+  journal={Molecular phylogenetics and evolution},
+  volume={177},
+  pages={107608},
+  year={2022},
+  publisher={Elsevier}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+
+@article{borry2020coproid,
+  title={CoproID predicts the source of coprolites and paleofeces using microbiome composition and host DNA content},
+  author={Borry, Maxime and Cordova, Bryan and Perri, Angela and Wibowo, Marsha and Honap, Tanvi Prasad and Ko, Jada and Yu, Jie and Britton, Kate and Girdland-Flink, Linus and Power, Robert C and Jacobson, David and others},
+  journal={PeerJ},
+  volume={8},
+  pages={e9001},
+  year={2020},
+  publisher={PeerJ Inc.}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{jacobson2023improved,
+  title={An improved framework for detecting discrete epidemiologically meaningful partitions in hierarchically clustered genetic data},
+  author={Jacobson, David and Low, Ross and Plucinski, Mateusz M and Barratt, Joel LN},
+  journal={Bioinformatics Advances},
+  volume={3},
+  number={1},
+  pages={vbad118},
+  year={2023},
+  publisher={Oxford University Press}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{jacobson2017age,
+  title={Age is the primary factor structuring diversity of the oral microbiome},
+  author={Jacobson, David and Sankaranarayanan, K and Larson, PS and Watanabe, N and Tanihata, T and Lum, JK and Lewis Jr, Cecil M},
+  year={2017},
+  booktitle = {American Journal of Physical Anthropology Annual Meeting},
 }
+
+@article{jacobson2021shifts,
+  title={Shifts in gut and vaginal microbiomes are associated with cancer recurrence time in women with ovarian cancer},
+  author={Jacobson, David and Moore, Kathleen and Gunderson, Camille and Rowland, Michelle and Austin, Rita and Honap, Tanvi Prasad and Xu, Jiawu and Warinner, Christina and Sankaranarayanan, Krithivasan and Lewis Jr, Cecil M},
+  journal={PeerJ},
+  volume={9},
+  pages={e11574},
+  year={2021},
+  publisher={PeerJ Inc.}
+}
+
+@unpublished{barrattPvivax,
+  author = {Barratt, Joel and Jacobson, David and Bajic, Marko and Pierre Louis, Edwin and Carlson, Christina and Kelley, Julia and others},
+  title = {Genetic characterization of Plasmodium vivax linked to autochthonous malaria transmission in the US using Illumina AmpliSeq technology},
+  note = {Manuscript in preparation},
+  year = {2024},
+  publisher = {Manuscript in preperation}
+
+}
+
+@unpublished{pierreLouisPfal,
+  author = {Pierre-Louis, Edwin and Kelley, Julia Patel, Dhruviben and Carlson, Christina and Talundzic, Eldin and Jacobson, David and Barratt, Joel},
+  title = {Genetic linkage of drug resistance genotypes to continents using Pfs47 and Pfcpmp for travel-associated Plasmodium falciparum malaria cases with an unreported travel history (USA, 2018-2021)},
+  note = {Manuscript under review (Antimicrobial Agents and Chemotherapy)},
+  year = {2024},
+  publisher = {Antimicrobial Agents and Chemotherapy}
+
+}
+
+@unpublished{shenCyclo,
+  author = {Shen, John and Cama, Vitaliano and Jacobson, David and Barratt, Joel and Straily, Anne},
+  title = {Analysis of Cyclospora Genotypic Variations and Associated Epidemiological Characteristics in the United States between 2018 and 2021},
+  note = {Manuscript under review (Emerging Infectious Diseases)},
+  year = {2024},
+  publisher = {Emerging Infectious Diseases}
+
+}
+
+
