updating about me, projects, and bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -152,12 +152,6 @@
   publisher={Oxford University Press}
 }
 
-@inproceedings{jacobson2017age,
-  title={Age is the primary factor structuring diversity of the oral microbiome},
-  author={Jacobson, David and Sankaranarayanan, K and Larson, PS and Watanabe, N and Tanihata, T and Lum, JK and Lewis Jr, Cecil M},
-  year={2017},
-  booktitle = {American Journal of Physical Anthropology Annual Meeting},
-}
 
 @article{jacobson2021shifts,
   title={Shifts in gut and vaginal microbiomes are associated with cancer recurrence time in women with ovarian cancer},
@@ -169,31 +163,52 @@
   publisher={PeerJ Inc.}
 }
 
+
+@article{pierre2024geo,
+  title={Geo-classification of drug-resistant travel-associated Plasmodium falciparum using Pfs47 and Pfcpmp gene sequences (USA, 2018--2021)},
+  author={Pierre-Louis, Edwin and Kelley, Julia and Patel, Dhruviben and Carlson, Christina and Talundzic, Eldin and Jacobson, David and Barratt, Joel Leonard Nicholas},
+  journal={Antimicrobial Agents and Chemotherapy},
+  volume={68},
+  number={12},
+  pages={e01203--24},
+  year={2024},
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+}
+
+
+@article{shen2025cyclospora,
+  title={Cyclospora Genotypic Variations and Associated Epidemiologic Characteristics, United States, 2018--2021},
+  author={Shen, John and Cama, Vitaliano A and Jacobson, David and Barratt, Joel and Straily, Anne},
+  journal={Emerging Infectious Diseases},
+  volume={31},
+  number={2},
+  pages={256},
+  year={2025}
+}
+
+
+@article{peterson2025cyclospora,
+  title={Cyclospora Genotypic Variations and Associated Epidemiologic Characteristics, United States, 2018--2021},
+  author={Peterson, Anna and Jacobson, David and Richins, Travis and Barratt Joel and Qvarnstrom, Yvonne},
+  journal={Journal of Clinical Microbiology},
+  volume={Accepted},
+  year={2025}
+}
+
 @unpublished{barrattPvivax,
   author = {Barratt, Joel and Jacobson, David and Bajic, Marko and Pierre Louis, Edwin and Carlson, Christina and Kelley, Julia and others},
   title = {Genetic characterization of Plasmodium vivax linked to autochthonous malaria transmission in the US using Illumina AmpliSeq technology},
+  note = {Manuscript in peer review},
+  year = {2025},
+  publisher = {Manuscript in peer review}
+
+}
+
+@unpublished{whiteNosocomial,
+  author = {White J. L. and Ridpath A. D. and Guzzardi E. and  Smith K. and Slavinski S. and  Antwi M. and Lee E. and Barrett K., and Southwick K. L. and  Gayen S.and Quinn M. J. and Mace K. E. and Williams S. and Raphael B., and Jacobson, D. K., and Barratt J. L. N. and others},
+  title = {Case Report and Epidemiological Investigation of Healthcare-associated Plasmodium falciparum Malaria Transmission in Westchester County, New York- 2023},
   note = {Manuscript in preparation},
-  year = {2024},
-  publisher = {Manuscript in preperation}
+  year = {2025},
+  publisher = {Manuscript in preparation}
 
 }
-
-@unpublished{pierreLouisPfal,
-  author = {Pierre-Louis, Edwin and Kelley, Julia Patel, Dhruviben and Carlson, Christina and Talundzic, Eldin and Jacobson, David and Barratt, Joel},
-  title = {Genetic linkage of drug resistance genotypes to continents using Pfs47 and Pfcpmp for travel-associated Plasmodium falciparum malaria cases with an unreported travel history (USA, 2018-2021)},
-  note = {Manuscript under review (Antimicrobial Agents and Chemotherapy)},
-  year = {2024},
-  publisher = {Antimicrobial Agents and Chemotherapy}
-
-}
-
-@unpublished{shenCyclo,
-  author = {Shen, John and Cama, Vitaliano and Jacobson, David and Barratt, Joel and Straily, Anne},
-  title = {Analysis of Cyclospora Genotypic Variations and Associated Epidemiological Characteristics in the United States between 2018 and 2021},
-  note = {Manuscript under review (Emerging Infectious Diseases)},
-  year = {2024},
-  publisher = {Emerging Infectious Diseases}
-
-}
-
-
