tesing Allie's project

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -188,7 +188,7 @@
 
 
 @article{peterson2025cyclospora,
-  title={Cyclospora Genotypic Variations and Associated Epidemiologic Characteristics, United States, 2018--2021},
+  title={Assessing the sequencing success and analytical specificity of a targeted amplicon deep sequencing workflow for genotyping the foodborne parasite Cyclospora},
   author={Peterson, Anna and Jacobson, David and Richins, Travis and Barratt Joel and Qvarnstrom, Yvonne},
   journal={Journal of Clinical Microbiology},
   volume={Accepted},
